name:                pong-server
version:             0.1.0.0
synopsis:            A simple embedded pingable server that runs in the background.
description:         Please see README.md
homepage:            http://github.com/RobertFischer/pong-server#readme
license:             PublicDomain
license-file:        UNLICENSE
author:              Robert Fischer
maintainer:          smokejumperit+pong-server@gmail.com
copyright:           2016 Robert Fischer
category:            utilities
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pong
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  OverloadedStrings
                    ,  LambdaCase
                    ,  MultiWayIf
                    ,  TransformListComp
                    ,  FlexibleInstances
                    ,  NoMonomorphismRestriction
                    ,  DeriveGeneric

test-suite pong-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pong-server
                     , hspec >= 2.2.2 && < 3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/RobertFischer/pong-server
